2008-09-25  Ramon Novoa  <rnovoa@artica.es>

	* include/help/en/help_duplicateconfig.php,
	  include/help/en/help_wminamespace.php: Added to repository. Help
	  files.

	* godmode/agentes/module_manager_editor_wmi.php,
	  godmode/agentes/manage_config_remote.php: Added help.

2008-09-25  Sancho Lerena <slerena@artica.es>

	* events.php: Forced a shorten agent name to avoid layout problems.
	Added a new combo to define a limit for pagination in event view.

2008-09-24  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor_wmi.php: Added WMI namespace
	  support.

2008-09-24  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/functions_db.php: Fixed a small bug in get_db_value and fixed
	check_server_status () to return an int at all times

	* general/header.php: Removed my old table code. Fixed bug #2119102.

	* ChangeLog: Made Jorge's entry use tab instead of spaces

2008-09-24  Ramon Novoa  <rnovoa@artica.es>

	* extensions/update_manager/sql/update_manager.sql,
	  extensions/update_manager/lib/libupdate_manager_client.php,
	  extensions/update_manager/settings.php: Added proxy support to
	  update manager.

2008-09-23  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po: Updated Spanish translation, fixes a bug.

2008-09-22  Raul Mateos  <raulofpandora@gmail.com>

	* pandora_console.spec: Changed URL. Added FMS to name. Updated version.

2008-09-22  Manuel Arostegui <marostegui@artica.es>

	* pandoradb_data.sql: Changed FTP module's TCP received string, set
	  to 220, 221 makes the module to does not know whether the service
	  is active or not.

2008-09-22  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/*: Updated translations from Launchpad. Thanks
	  to all contributors.

	* pandora_console/pandoradb_data.sql: database modified to show the
	  new languages.

2008-09-19  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* godmode/agentes/configurar_agente.php: Fixed small bug when renaming